--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-xml-bodyparser": "^0.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
+    "react": "^16.13.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
