--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "laguna proxy-server app",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app.js",
+    "start": "node app.js",
     "server": "nodemon app.js",
-    "dev": "cross-env NODE_ENV=production concurrently \"npm run server\""
+    "dev": "concurrently \"npm run server\""
   },
   "keywords": [
     "mern",
